; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_8469.c_rdp_out_bitmap_caps.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_8469.c_rdp_out_bitmap_caps.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RDP_CAPSET_BITMAP = common dso_local global i32 0, align 4
@RDP_CAPLEN_BITMAP = common dso_local global i32 0, align 4
@bitmap_compression = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @rdp_out_bitmap_caps to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rdp_out_bitmap_caps(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = load i32, i32* @RDP_CAPSET_BITMAP, align 4
  %5 = call i32 @out_uint16_le(i32 %3, i32 %4)
  %6 = load i32, i32* %2, align 4
  %7 = load i32, i32* @RDP_CAPLEN_BITMAP, align 4
  %8 = call i32 @out_uint16_le(i32 %6, i32 %7)
  %9 = load i32, i32* %2, align 4
  %10 = call i32 @out_uint16_le(i32 %9, i32 8)
  %11 = load i32, i32* %2, align 4
  %12 = call i32 @out_uint16_le(i32 %11, i32 1)
  %13 = load i32, i32* %2, align 4
  %14 = call i32 @out_uint16_le(i32 %13, i32 1)
  %15 = load i32, i32* %2, align 4
  %16 = call i32 @out_uint16_le(i32 %15, i32 1)
  %17 = load i32, i32* %2, align 4
  %18 = call i32 @out_uint16_le(i32 %17, i32 800)
  %19 = load i32, i32* %2, align 4
  %20 = call i32 @out_uint16_le(i32 %19, i32 600)
  %21 = load i32, i32* %2, align 4
  %22 = call i32 @out_uint16(i32 %21, i32 0)
  %23 = load i32, i32* %2, align 4
  %24 = call i32 @out_uint16(i32 %23, i32 0)
  %25 = load i32, i32* %2, align 4
  %26 = load i64, i64* @bitmap_compression, align 8
  %27 = icmp ne i64 %26, 0
  %28 = zext i1 %27 to i64
  %29 = select i1 %27, i32 1, i32 0
  %30 = call i32 @out_uint16_le(i32 %25, i32 %29)
  %31 = load i32, i32* %2, align 4
  %32 = call i32 @out_uint16(i32 %31, i32 0)
  %33 = load i32, i32* %2, align 4
  %34 = call i32 @out_uint16_le(i32 %33, i32 1)
  %35 = load i32, i32* %2, align 4
  %36 = call i32 @out_uint16(i32 %35, i32 0)
  ret void
}

declare dso_local i32 @out_uint16_le(i32, i32) #1

declare dso_local i32 @out_uint16(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
